# KetoCalculator

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  dev.Dockerfile  pyproject.toml  requirements.runtime.txt
backend/app/: calc.py  lambda_handler.py  main.py  models.py  models_mealplan.py
backend/app/formulas/: bmi.py  bodyfat.py  ffmi.py
backend/app/services/: llm_mealplan.py
backend/tests/: test_bmi.py  test_bmr.py  test_bodyfat.py  test_calc.py  test_ffmi.py  test_mealplan_prompt.py  test_tdee.py  test_units.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx
